--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ llama-index = "^0.9.22"
 python-dotenv = "^1.0.0"
 setuptools = "^69.0.3"
 weaviate-client = "^3.26.0"
+google-generativeai = ">=0.3.0"
 
 
 [build-system]
