--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^1.0.0"
 setuptools = "^69.0.3"
 weaviate-client = "^3.26.0"
 google-generativeai = ">=0.3.0"
+weasyprint = "^60.2"
 
 
 [build-system]
