--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ setuptools = "^69.0.3"
 weaviate-client = "^3.26.0"
 google-generativeai = ">=0.3.0"
 weasyprint = "^60.2"
+boto3 = "^1.34.14"
 
 
 [build-system]
